Edicion de nav y music

--- a/css/main.css
+++ b/css/main.css
@@ -1,131 +1,156 @@
 /*IMPORT FONTS*/
+
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
-
-html{
+html {
     box-sizing: border-box;
     font-size: 62.5%;
-  }
-  *,*::before, *::after{
+}
+
+*,
+*::before,
+*::after {
     box-sizing: inherit;
-  }
+}
+
 
 /*GLOBALES*/
-:root{
-    --colorTexto : black;
-    --colorTitle : #d2ff71;
-    --colorTextNav : white;
-    --colorTextNavHover : rgb(252, 190, 77);
-    --colorNav : #20202080;
-    --fontNav : 'Libre Franklin', sans-serif;
-    --fontTitle : 'Open Sans', sans-serif;
+
+:root {
+    --colorTexto: black;
+    --colorTitle: #d2ff71;
+    --colorTextNav: white;
+    --colorTextNavHover: rgb(252, 190, 77);
+    --colorNav: #20202080;
+    --fontNav: 'Libre Franklin', sans-serif;
+    --fontTitle: 'Open Sans', sans-serif;
 }
-.center{
+
+.center {
     text-align: center;
 }
-.p-a{
-    font-size: 1.5rem;
+
+.p-a {
+    font-size: 1.3rem;
 }
-.title{
-    font-size: 2.3rem;
+
+.title {
+    font-size: 1.9rem;
 }
-img{
+
+img {
     max-width: 100%;
 }
-body{
+
+body {
     background-color: rgb(249, 255, 198);
+    transition: all .9s ease-in-out;
 }
-.cuerpo{
+
+.cuerpo {
     width: 90%;
     margin: 0 auto;
     height: auto;
     background-color: #ffffff;
     margin-top: 2rem;
 }
-h2{
+
+h2 {
     width: 100%;
     padding: 2rem;
     background-color: #d2ff71;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: var(--fontTitle);
     text-align: center;
 }
-h4{
+
+h4 {
     width: 100%;
     color: white;
     padding: .5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: var(--fontTitle);
     text-align: left;
 }
+
 @media (min-width: 768px) {
-    h2{
+    h2 {
         width: 45%;
         background-color: #fdff71;
         text-align: left;
     }
-    h4{
-        font-size: 2.6rem;
+    h4 {
+        font-size: 1.9rem;
         text-align: center;
     }
 }
-.title{
+
+.title {
     width: 100%;
     padding: 2rem;
 }
-@media (min-width: 768px) { 
-    .title{
+
+@media (min-width: 768px) {
+    .title {
         width: 60%;
         font-size: 2.3rem;
-    }   
+    }
 }
+
 
 /** MENU MOVIL **/
 
-.menu-hamburguesa{
+.menu-hamburguesa {
     display: block;
     padding: 2rem;
     margin: 0 auto;
     width: 75%;
 }
-.menu-hamburguesa a{
+
+.menu-hamburguesa a {
     display: block;
     font-size: 4rem;
     margin: 2rem auto;
     color: #fff;
     text-align: center;
 }
+
 @media (min-width: 768px) {
-    .menu-hamburguesa{
-        display: none;        
-    }   
+    .menu-hamburguesa {
+        display: none;
+    }
 }
-.conte-movil{
+
+.conte-movil {
     background-color: rgba(0, 0, 0, 0.548);
     width: 100%;
     padding: 2rem;
     display: none;
 }
-.conte-movil nav a{
+
+.conte-movil nav a {
     font-size: 2rem;
     font-family: var(--fontTitle);
     text-decoration: none;
     width: 50%;
     margin-bottom: 3rem;
 }
-.social-media-movil{
+
+.social-media-movil {
     display: flex;
     font-size: 1.6rem;
     justify-content: space-evenly;
 }
-.social-media-movil a{
+
+.social-media-movil a {
     width: 33.3%;
 }
 
 
 /*HEADER*/
-.header-class{
-    background-image:  url(../img/imgHeader.jpg);
+
+.header-class {
+    background-image: url(../img/imgHeader.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,26 +158,31 @@ h4{
     height: auto;
     width: 100%;
 }
+
 @media (min-width: 768px) {
-    .header-class{
+    .header-class {
         height: 100vh;
     }
 }
-.nav-principal{
+
+.nav-principal {
     display: none;
 }
+
 @media (min-width: 768px) {
-    .nav-principal{
+    .nav-principal {
         display: flex;
         text-align: center;
         background-color: var(--colorNav);
+        transition: all .8s ease-in-out;
     }
-    .nav{
+    .nav {
         padding: 2rem 0 1rem 0;
         font-size: 1.5rem;
         width: 70%;
+        transition: all .5s ease-in;
     }
-    .navegacion a{
+    .navegacion a {
         display: inline-block;
         text-decoration: none;
         margin-left: 3rem;
@@ -162,31 +192,54 @@ h4{
         font-size: 1.5rem;
         -webkit-transition: all .3s ease;
     }
-    .navegacion a:hover{
+    .navegacion a:hover {
         color: var(--colorTextNavHover);
     }
-    .social-media{
+    .social-media {
         width: 15%;
         padding: 2rem 0 1rem 0;
         font-size: 3.3rem;
+        transition: all .3s ease-in;
     }
-    .social-media i{
+    .social-media i {
         color: var(--colorTextNav);
         margin-left: 1rem;
         -webkit-transition: all .2s ease-in-out;
         font-size: 2.5rem;
     }
-    .social-media i:hover{
+    .social-media i:hover {
         -webkit-transform: scale(1.1);
     }
-    .logo-img{
+    .logo-img {
         width: 15%;
+        transition: all .3s ease-in;
     }
-    .logo-img img{
+    .logo-img img {
         width: 25rem;
     }
+    .alternativo-nav {
+        background-color: rgba(80, 92, 71, 0.418) !important;
+    }
+    .alternativo-nav .navegacion a {
+        margin-left: 1rem;
+    }
+    .alternativo-nav .nav {
+        padding: .5rem;
+        font-size: 1.2rem;
+        margin: 0 auto;
+        transition: all .4s ease-out;
+    }
+    .alternativo-nav .social-media {
+        padding: 0;
+        transition: all .3s ease-out;
+    }
+    .alternativo-nav .logo-img {
+        width: 10%;
+        transition: all .3s ease-out;
+    }
 }
-.fixed{
+
+.fixed {
     position: fixed;
     width: 100%;
     top: 0;
@@ -194,71 +247,88 @@ h4{
     z-index: 2;
 }
 
+
 /*INTEGRANTES DE LA BANDA*/
-.musicos{
+
+.musicos {
     padding: 2rem;
     display: none;
 }
+
 @media (min-width: 768px) {
-    .musicos{
+    .musicos {
         display: block;
     }
 }
-.list-music{
+
+.list-music {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 3rem;
     grid-column-gap: 2rem;
 }
-.cheMusix{
-    width:100%;
+
+.cheMusix {
+    width: 100%;
     margin-bottom: 2rem;
     min-height: 30rem;
     text-align: center;
     background-color: #e1e1e1;
     transition: all .5s ease-in-out;
 }
-.cheMusix img{
+
+.cheMusix img {
     width: 100%;
 }
-.cheMusix h3{
+
+.cheMusix h3 {
     text-transform: uppercase;
     font-family: var(--fontNav);
     font-weight: 400;
     font-size: 2rem;
 }
-.cheMusix:hover{
+
+.cheMusix:hover {
     -webkit-transform: scale(1.1);
     border: 1px solid #d2ff71;
-    -webkit-box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
-    -moz-box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
-    box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
+    -webkit-box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
+    box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
 }
 
+
 /*BIO*/
-.cont-img, .cont-imgDisc{
+
+.cont-img,
+.cont-imgDisc {
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
     height: 40rem;
     width: 100%;
 }
-.cont-img{
+
+.cont-img {
     background-image: url(../img/imgBioMini.jpg);
+    max-width: 100%;
 }
-.cont-imgDisc{
+
+.cont-imgDisc {
     background-image: url(../img/imgMusic1.jpg);
 }
+
 @media (min-width: 768px) {
-    .cont-img{
+    .cont-img {
         background-position: center center;
         background-image: url(../img/imgBio.jpg);
     }
 }
-.text-bio{
+
+.text-bio {
     padding: 2rem;
 }
-.bio{
+
+.bio {
     text-align: center;
     font-size: 1.8rem;
     width: 100%;
@@ -267,67 +337,79 @@ h4{
     margin: 0 auto;
     font-family: var(--fontNav);
 }
+
 @media (min-width: 768px) {
-    .bio{
+    .bio {
         width: 60%;
         font-size: 1.6rem;
     }
 }
 
+
 /**Music*/
-.disc-flex{
+
+.disc-flex {
     display: block;
     margin: 0 auto;
     padding: 2rem;
     width: 100%;
     clear: both;
 }
+
 @media (min-width: 768px) {
-    .disc-flex{
+    .disc-flex {
         display: flex;
         justify-content: space-evenly;
     }
 }
-.music-disc{
+
+.music-disc {
     width: 75%;
     margin: 2rem auto;
-    -webkit-box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
-    -moz-box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
-    box-shadow: -2px 2px 46px 0px rgba(0,0,0,0.28);
+    -webkit-box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
+    box-shadow: -2px 2px 46px 0px rgba(0, 0, 0, 0.28);
 }
+
 @media (min-width: 768px) {
-    .music-disc{
+    .music-disc {
         width: 30%;
         margin: unset;
     }
 }
-.reproduccion, .descripcionDisco{
+
+.reproduccion,
+.descripcionDisco {
     margin-left: 1rem;
 }
-.reproduccion{
+
+.reproduccion {
     display: flex;
     justify-content: space-around;
 }
-.reproduccion a{
-    
-}
+
+.reproduccion a {}
+
 @media (min-width: 768px) {
-    .reproduccion{
-        display: block;  
-    }   
+    .reproduccion {
+        display: block;
+    }
 }
-.music-disc h3{
+
+.music-disc h3 {
     font-size: 2rem;
     padding: 0 0 1rem 0;
     text-align: center;
     font-family: var(--fontTitle);
     transition: border-bottom .5s ease-in;
 }
-.music-disc h3:hover{
+
+.music-disc h3:hover {
     color: #2c2c2c;
     cursor: pointer;
 }
-.reprod{
+
+.reprod {
     display: block;
     font-size: 3.5rem;
     color: black;
@@ -335,23 +417,28 @@ h4{
     padding: 1rem 0 2rem 0;
     transition: color .5s ease-in-out;
 }
-.reprod:hover{
+
+.reprod:hover {
     color: #2c2c2c;
 }
-.culturaPresente{
+
+.culturaPresente {
     margin-left: 1rem;
 }
-.tapas-disc{
+
+.tapas-disc {
     width: 100%;
     display: flex;
     justify-content: flex-start;
 }
-.tapas-disc .img-mini{
+
+.tapas-disc .img-mini {
     width: 20%;
     margin: 0;
     padding: 0;
 }
-.textDisc{
+
+.textDisc {
     width: 13%;
     flex: .2;
     font-size: 2rem;
@@ -360,68 +447,79 @@ h4{
 }
 
 @media (min-width: 768px) {
-    .tapas-disc{
+    .tapas-disc {
         display: block;
     }
-    .tapas-disc .img-mini{
+    .tapas-disc .img-mini {
         width: 33.3%;
         margin: 0 auto;
     }
-    .textDisc{
+    .textDisc {
         width: 33.3%;
         text-align: center;
         margin: 0 auto;
     }
 }
 
+
 /*GALERIA- PICTURES*/
-.imgGale{
+
+.imgGale {
     width: 100%;
     height: auto;
     text-align: center;
 }
-.imgGale a{
+
+.imgGale a {
     display: inline-block;
     width: 25%;
     margin: 0 auto;
     margin-top: 2rem;
 }
+
 @media (min-width: 768px) {
-    .imgGale{
+    .imgGale {
         display: inline-block;
     }
-    .imgGale a{
+    .imgGale a {
         width: 15%;
     }
 }
 
+
 /** VIDEOS **/
-.conte-vid{
+
+.conte-vid {
     display: block;
     padding: .5rem;
     text-align: center;
 }
+
 @media (min-width: 768px) {
-    .conte-vid{
+    .conte-vid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         padding: 2rem;
-    }   
+    }
 }
-.vide iframe{
-    width: 265px; 
+
+.vide iframe {
+    width: 265px;
     height: 160px;
     margin: 1rem auto;
 }
+
 @media (min-width: 768px) {
-    .vide iframe{
-        width: 360px; 
+    .vide iframe {
+        width: 360px;
         height: 250px;
     }
 }
 
+
 /** Contacto **/
-.contacto{
+
+.contacto {
     background-image: url(../img/img-contac.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -430,55 +528,67 @@ h4{
     height: 100vh;
     width: 100%;
 }
-.cont{
+
+.cont {
     display: block;
     background-color: rgba(0, 0, 0, 0.37);
     width: 100%;
-    height: 30rem;
+    height: 15rem;
     margin: 0 auto;
     padding: 5rem;
 }
+
 @media (min-width: 768px) {
-    .cont{
+    .cont {
         display: flex;
         justify-content: space-evenly;
         padding: 10rem;
     }
 }
-.cont a{
+
+.cont a {
     display: block;
     text-align: center;
-    margin-top: 3rem;
+    margin-top: 1rem;
     text-decoration: none;
     padding: 0;
 }
+
 @media (min-width: 768px) {
-    .cont a{
+    .cont a {
         display: inline-block;
         padding: 1rem;
     }
 }
-.cont i{
+
+.cont i {
     margin-right: 1rem;
-    font-size: 4rem;
+    font-size: 3.4rem;
 }
-.facebook{
+
+.facebook {
     margin-top: 5rem;
     text-align: center;
 }
-.volver{
+
+.volver {
     text-align: center;
 }
-.volver a{
+
+.volver a {
     text-decoration: none;
 }
-.volver i{
+
+.volver i {
     margin-top: 3rem;
-    font-size: 3.5rem;
+    font-size: 2rem;
     color: white;
 }
+
+
 /** FOOTER **/
-.footer{
+
+.footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 2rem;
@@ -486,21 +596,26 @@ h4{
     width: 100%;
     height: auto;
     color: white;
+    margin-top: 3rem;
 }
-.info-footer{
+
+.info-footer {
     display: flex;
     align-items: center;
     margin: 0 auto;
 }
-.info-footer span, p, h5, a{
-    font-size: 1.5rem;
+
+.info-footer span,
+p,
+h5,
+a {
+    font-size: 1.3rem;
     padding: 0;
     font-family: var(--fontNav);
 }
-.info-footer a{
+
+.info-footer a {
     text-decoration: none;
     margin-left: 1rem;
     color: white;
 }
-
-
